# pyacu

./: .gitignore  LICENSE  example.acu  pyproject.toml
acu/: __init__.py  __main__.py  driver.py  source.py
acu/codegen/: __init__.py  emit.py  generator.py
acu/parser/: __init__.py  lexer.py  nodes.py
acu/refanal/: __init__.py  build_ir.py  copy_propagation.py  dataflow.py  flag_elimination.py  flow_graph_ir.py  ir_transform.py  lower_refs.py  refanal.py
acu/semanal/: __init__.py  basic.py  ir.py  typeanal.py  types.py
tests/: test_conversion_rules.py
